--- a/app/views/product.scala.html
+++ b/app/views/product.scala.html
@@ -223,7 +223,7 @@ margin-right:5%;
 		            </div>
 		            @subjectPresent(){
 		            <div style="width: 100%;float: left;" data-bind="with: presentprod">
-		               <label id="ratingLabel" style="float:left;margin-top: 5px;padding-left: 10px;">Did you like this Product? Rate now!&nbsp&nbsp</label>	
+		               <label id="ratingLabel" style="float:left;margin-top: 5px;padding-left: 10px;">Did you like this Product? Rate it now!&nbsp&nbsp</label>	
 					   <input id="@(productx.id)_ratting" class="rating"  value="@Application.getProductRating(productx.id)"  data-show-clear="false" data-show-caption="false" type="number" data-min="0" data-max="5" data-size="xs" data-step="1"  data-rtl="false"></input>
 					   
 					   <div class="btn-sm">
