--- a/app/views/Admin/Blog/AddEdit2.scala.html
+++ b/app/views/Admin/Blog/AddEdit2.scala.html
@@ -7,6 +7,9 @@
 dd.info{font-size: xx-small!important;color:gray;}
 dd.error{color:red!important;}
 textarea { width: 100%; height:200px; padding: 4px; }
+i.icon-share {
+	color: #428bca;
+}
 </style>
 
 
@@ -43,21 +46,22 @@ textarea { width: 100%; height:200px; padding: 4px; }
 		<div class="jumbotron" style="margin-top:40px;">
 				<div class="row">	
 				<div class="col-sm-8">
-		@helper.form(hiturl, 'enctype -> "multipart/form-data") {		
+				
+		<form action="@hiturl" method="POST" enctype="multipart/form-data" id="blogForm">
 			@inputText(field = newblogform("blogtittle"), args = 'size -> 255, 'placeholder -> "Blog Title",'_label ->"Blog Title",'class->"form-control")			
 			@textarea(field = newblogform("blogtext"), args = 'rows -> 75, 'cols -> 300 ,'class->"textarea",'_label ->"Blog Content")			
 			@inputText(field = newblogform("tags"), args = 'size -> 255, 'placeholder -> "Tags",'_label ->"Blog Tags",'class->"form-control")			
 			
-			<input onchange="selectedImage()" style="display:none;" type="file" multiple="multiple" name="fileUpload" id="fileupload" class="btn btn-default btn-elg">
+			<input style="display:none;" type="file" multiple="multiple" name="fileUpload[]" id="fileupload" class="btn btn-default btn-elg">
 			<input onchange="selectedVideo()" style="display:none;" type="file" multiple="multiple" name="fileUpload2" id="fileupload2" class="btn btn-default btn-elg">
 		
 			@if(isedit){
 			<input type="hidden" name="blogid" id="blogid" value="@newblogform("blogid").value">
 			}
-			<input type="submit" value="POST IT!!" class="btn btn-primary">		
+			<input type="button" onclick="addImagesBeforeSubmit()" value="POST IT!!" class="btn btn-primary">		
 			
 			
-		}	
+		</form>	
 		</div>
 		
 			<div class="col-sm-4">
