--- a/app/views/Templates/su/SingleBlogPage.scala.html
+++ b/app/views/Templates/su/SingleBlogPage.scala.html
@@ -4,7 +4,14 @@
 
 <head>
 	<meta property="og:title" content="@blg.title"/>
-	<meta property="og:description" content="@blg.content"/>
+	<meta property="og:description" content="@Html(blg.content)"/>
+	<meta property="article:author" content="@blg.author.user.name"/>
+	<meta property="og:url" content="/blog/page/@blg.id"/>
+	<meta property="og:updated_time" content="@blg.postedAt"/>
+	<meta property="og:type" content="Article"/>
+	@for(img <- blg.getImages()) {
+    	<meta property="og:image" content="@img.getURL()"/>
+	} 
 </head>
 
 @pst(isadmin:Boolean)={
