--- a/app/views/Templates/su/SingleBlogPage.scala.html
+++ b/app/views/Templates/su/SingleBlogPage.scala.html
@@ -6,9 +6,9 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 		<meta property="og:title" content="@blg.title"/>
 		<meta property="og:type" content="article"/>
-		<meta property="og:description" content="@Html(blg.content)"/>
+		<meta property="og:description" content="@blg.htmlLessContent"/>
 		<meta property="og:url" content="@routes.Application.GetBlogPage(blg.id).absoluteURL()"/>
-		<meta property="og:updated_time" content="@blg.postedAt"/>
+		<meta property="og:updated_time" content="@blg.postedAt.getTime()"/>
 		
 		@for(img <- blg.getImages()) {
 			@if(img.isVideo==false){
