--- a/app/views/Templates/su/SingleBlogPage.scala.html
+++ b/app/views/Templates/su/SingleBlogPage.scala.html
@@ -356,13 +356,13 @@
 	<script>var allblogidlist=[];
 	
 	$(document).ready(function(){
-		setTimeout(function(){
+		/* setTimeout(function(){
 		checkHeight();
 		$("[data-sticky_column]").stick_in_parent({
 		      parent: "[data-sticky_parent]",
 		      offset_top:-50
 		    });
-		},1000);
+		},1000); */
 		getComments();
 		
 		//$("html").niceScroll({styler:"fb",cursorcolor:"#000"});
