--- a/app/views/Admin/AdminPage.scala.html
+++ b/app/views/Admin/AdminPage.scala.html
@@ -17,6 +17,7 @@
 	<li><a class="underline" href="@routes.Application.GetAllWallpapers()">Wallpapers</a></li>
 	<li><a class="underline" href="@routes.AdminControls.ipblacklistcontrol_view()">Blocked IP</a></li>
 	<li><a class="underline" href="@routes.AdminControls.sqlcontrol_view()">Execute Sql</a></li>
+	<li><a class="underline" href="@routes.Application.adminPageForSpam()">Check Spam Comments</a></li>
 	</ul>			
 </div>			
 @Templates.su.jready{
