--- a/app/views/Templates/json/commentbrick.scala.html
+++ b/app/views/Templates/json/commentbrick.scala.html
@@ -8,5 +8,5 @@
 	"cid":@cid,
 	"ct":"@GHelp.EHtml(content)",
 	"cd":"@Application.timezoneformat(postedAt)",
-	"sf":"@spam_flag"
+	"sf":@spam_flag
 }
