--- a/app/views/Templates/pagehead.scala.html
+++ b/app/views/Templates/pagehead.scala.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="@routes.Assets.at("bl/css/font-awesome.css")">
     <link rel="stylesheet" href="@routes.Assets.at("css/colorbox.css")" /> 
     <link rel="stylesheet" href="@routes.Assets.at("bl/css/nsPopover.css")" />
+    <link rel="stylesheet" href="@routes.Assets.at("bl/css/ng-table.css")" />
     
     @**<link media="screen" type="text/css" rel="stylesheet" href="@routes.Assets.at("style.css")" />**@
     
@@ -52,7 +53,8 @@
 	<script src="@routes.Assets.at("js/star-rating.js")" type="text/javascript"></script>
 	
 	<!-- Angular-lib -->
-    <script src="@routes.Assets.at("bl/js/angular.min.js")"></script> 
+    <script src="@routes.Assets.at("bl/js/angular.min.js")"></script>
+    <script src="@routes.Assets.at("bl/js/angular-resource.min.js")"></script> 
     <script src="@routes.Assets.at("bl/js/ui-bootstrap.min.js")"></script>
 	<script src="@routes.Assets.at("bl/js/ui-bootstrap-tpls.min.js")"></script>
     <!-- BigVideo Dependencies -->
@@ -72,6 +74,8 @@
 	<script src="@routes.Assets.at("bl/js/nsPopover.js")"></script>
 	<script src="@routes.Assets.at("bl/js/jquery.nicescroll.js")"></script>
 	<script src="@routes.Assets.at("bl/js/jquery.fileupload.js")"></script>
+	
+	<script src="@routes.Assets.at("bl/js/ng-table.js")"></script>
 	
 	@appendcontent 
 
