--- a/app/views/search.scala.html
+++ b/app/views/search.scala.html
@@ -74,13 +74,19 @@ function PBDocInit(ldiv)
 						  itemSelector: '.isotope-item',
 						  masonry: {
 					   		columnWidth: 10,
-					        gutterWidth: 10
 					  	  }
 					});
+					
+					$(".isotope-item").find(".product-image").load(function(){
+			        	$container.isotope();
+			        });
 				} else {
 					$.each($('.isotope-item'), function(index, elem) {
 						if (index >= sizeOfItemsBeforeApplyingIsotope) {
 							$container.isotope( 'appended', elem );
+								$(elem).find(".product-image").load(function(){
+							        	$container.isotope();
+							        });
 						}
 					});	
 				}
